# project2026-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_users.py
app/: main.py
app/api/: auth.py  catalog.py  contracts.py  cost_entries.py  plan.py  plan_write.py  projects.py
app/core/: config.py  db.py  odoo.py  security.py
app/models/: __init__.py  base.py  user.py
scripts/: discover_odoo.py
tests/: test_catalog.py  test_contracts.py  test_cost_entries.py  test_db.py  test_health.py  test_plan.py  test_plan_write.py  test_projects.py
